--- a/data/simulation/view/GoalieSim.yaml
+++ b/data/simulation/view/GoalieSim.yaml
@@ -2,8 +2,9 @@
 options:
   - SHOW_FIELD
   - SHOW_ROBOT
-  - SHOW_ROBOT_UNCERT
+  - SHOW_TRUTH_BALL
   - SHOW_BALL
   - SHOW_BALL_VEL
-  - SHOW_GOALS
+  - SHOW_BALL_UNCERT
+  - SHOW_VISION_RANGE
 ...
