--- a/data/simulation/view/Localization.yaml
+++ b/data/simulation/view/Localization.yaml
@@ -3,12 +3,13 @@ options:
   - SHOW_FIELD
   - SHOW_ROBOT
   - SHOW_BALL
+  - SHOW_LOCALIZATION_INFO
   - SHOW_BALL_VEL
   - SHOW_RELATIVE_OBJECTS
   - SHOW_LOCATION_TEXT_OVERLAY
   - SHOW_OBSERVATION_TEXT_OVERLAY
   - SHOW_VISION_RANGE
-  - SHOW_LOCALIZATION_INFO
   - SHOW_ODOMETRY
   - SHOW_ODOMETRY_OVERLAY
+  - SHOW_BEACONS
 ...
